# LG-Tracking

./: .gitignore  README.md  vercel.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  000_initial_tables.py  001_add_relevant_timestamps_to_track_matches.py  002_add_province_columns.py  003_add_municipality_tier.py
backend/app/: config.py  main.py
backend/app/ai/: gemini.py  perplexity.py  processor.py  prompts.py
backend/app/api/: alerts.py  auth.py  costs.py  cron.py  dependencies.py  discovery.py  health.py  processing.py  registry.py  search.py  subscribe.py  tracks.py
backend/app/db/: database.py
backend/app/discovery/: base.py  civicweb.py  custom_100milehouse.py  custom_ainsworthhotsprings.py  custom_alertbay.py  custom_anmore.py  custom_armstrong.py  custom_ashcroft.py  custom_balfour.py  custom_barriere.py  custom_bc_municipal.py  custom_belcarra.py  custom_burnslake.py  custom_cachecreek.py  custom_canalflats.py  custom_castlegar.py  custom_chase.py  custom_chetwynd.py  (+94 more)
backend/scripts/: validate_sources.py
backend/tests/: test_ai_pipeline.py  test_alberta_scrapers.py  test_alberta_subscription_e2e.py  test_alberta_tracker_coverage.py  test_batch2_scrapers.py  test_bc_municipal_scraper.py  test_civicweb.py  test_custom_scrapers.py  test_digest_pipeline.py  test_gemini.py  test_models.py  test_ontario_seed.py  test_ontario_tracker_coverage.py  test_poll_pipeline.py  test_security.py  test_seed.py  test_subscription_lifecycle.py  test_youtube.py
(+58 files in other folders)
